--- a/stranka/static/style.css
+++ b/stranka/static/style.css
@@ -47,22 +47,27 @@ h2 {
 }
 #myChart {
     height: 800px;
-    width: 100%;
+    width:800px;
     position: relative;
-    bottom: 200px;
+    bottom: 115px;
+    right:100px;
     z-index: -1;
+    background-color:#efefef;
+    overflow: hidden;
 }
 .info {
 	width: 200px;
 	height: 200px;
 	float: left;
 	font-size: 1.5em;
+		background-color: #efefef;
 }
 .info2 {
 	width: 200px;
 	height: 200px;
 	float: right;
 	font-size: 1.5em;
+		background-color: #efefef;
 }
 img {
 	margin-top: 5px;
@@ -72,7 +77,7 @@ img {
 	text-align: center;
 	font-size: 18px;
 	width: 120px;
-    height: 50px;
+    	height: 50px;
 	border-radius: 10px;
 	font-family: 'Fira Sans', sans-serif;
 	margin-top: 5px;
@@ -95,4 +100,14 @@ img {
  }
  .btn:hover {
  	padding: 0px;
+ }
+ .chartdiv {
+ 	width:1200px;
+    height:1200px;
+    border-radius:50%;
+    border-style: solid;
+    border-width: 300px;
+    color:#efefef;
+    position:relative;
+    top:200px;
  }
