--- a/stranka/templates/index.html
+++ b/stranka/templates/index.html
@@ -1,17 +1,3 @@
-{% extends "layout.html" %}
-	{% block content %}
-  <head>
-		<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-		<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-  <script>
-    zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
-    ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];
-  </script>
-  <script>
-    zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
-    ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];
-  </script>
-	</head>
 <body>
 	<main>
 		<h1>RADAR</h1>
@@ -28,26 +14,44 @@
 			<img src="../static/angle.png" alt="angle" width="20%" height="20%"> : 90°;
 		</div>
 	</main>
-		<div id='myChart'></div>
+		<div class="chartdiv"><div id='myChart'><style scoped>
+
+
+
+html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
+html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
+article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}
+a{background-color:transparent;-webkit-text-decoration-skip:objects}
+a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}
+small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
+sub{bottom:-0.25em}sup{top:-0.5em}figure{margin:1em 40px}img{border-style:none}svg:not(:root){overflow:hidden}
+code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}hr{box-sizing:content-box;height:0;overflow:visible}
+button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:bold}
+button,input{overflow:visible}button,select{text-transform:none}
+button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}
+button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner{border-style:none;padding:0}
+button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring{outline:1px dotted ButtonText} 2
+
+
+
+
+</style></div></div>
     <script>
       var myConfig = {
 
       "type": "radar",
-      "background-color": "#efefef",
       "plot": {
         "aspect": "rose",
         "stacked": true
       },
 
       "scale-v": {
+        "background-color":"red",
 
-		"values": "0:150:50"
+		"values": "0:1000:100"
       },
       "series": [{
-      	"values": [0,150,150,125,150,150,150,150,150,150,150,0],
-        "palette":1
-      },{
-        "values": [50,0,0,10,0,0,0,0,0,0,0,0],
+      	"values": [0,150,150,150,150,150,150,150,150,150,0],
         "palette": 2
       }]
     };
